@@ -39,6 +39,8 @@ Version 2.3.1  [ (in progress) ]
             - Added getFileParameters().
         normal.exports:
             - Added class SnapPeaExporter.
+        normal.imports:
+            - Added class DehydrationImporter.
         normal.mainui:
             - Added more keyboard accelerators.
         normal.mainui.FilePane:
